结题报告初稿

--- a/scutthesis.bib
+++ b/scutthesis.bib
@@ -38,15 +38,6 @@
   year={2008},
   publisher={Elsevier}
 }
-@inproceedings{dalal2005histograms,
-  title={Histograms of oriented gradients for human detection},
-  author={Dalal, Navneet and Triggs, Bill},
-  booktitle={2005 IEEE computer society conference on computer vision and pattern recognition (CVPR'05)},
-  volume={1},
-  pages={886--893},
-  year={2005},
-  organization={Ieee}
-}
 @article{viola2001robust,
   title={Robust real-time object detection},
   author={Viola, Paul and Jones, Michael and others},
@@ -56,63 +47,10 @@
   pages={4},
   year={2001}
 }
-@article{noble2006support,
-  title={What is a support vector machine?},
-  author={Noble, William S},
-  journal={Nature biotechnology},
-  volume={24},
-  number={12},
-  pages={1565--1567},
-  year={2006},
-  publisher={Nature Publishing Group}
-}
-@inproceedings{girshick2014rich,
-  title={Rich feature hierarchies for accurate object detection and semantic segmentation},
-  author={Girshick, Ross and Donahue, Jeff and Darrell, Trevor and Malik, Jitendra},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-  pages={580--587},
-  year={2014}
-}
-@article{he2015spatial,
-  title={Spatial pyramid pooling in deep convolutional networks for visual recognition},
-  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
-  volume={37},
-  number={9},
-  pages={1904--1916},
-  year={2015},
-  publisher={IEEE}
-}
-@inproceedings{girshick2015fast,
-  title={Fast r-cnn},
-  author={Girshick, Ross},
-  booktitle={Proceedings of the IEEE international conference on computer vision},
-  pages={1440--1448},
-  year={2015}
-}
-@article{ren2015faster,
-  title={Faster r-cnn: Towards real-time object detection with region proposal networks},
-  author={Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
-  journal={arXiv preprint arXiv:1506.01497},
-  year={2015}
-}
-@article{dai2016r,
-  title={R-fcn: Object detection via region-based fully convolutional networks},
-  author={Dai, Jifeng and Li, Yi and He, Kaiming and Sun, Jian},
-  journal={arXiv preprint arXiv:1605.06409},
-  year={2016}
-}
 @article{li2017light,
   title={Light-head r-cnn: In defense of two-stage object detector},
   author={Li, Zeming and Peng, Chao and Yu, Gang and Zhang, Xiangyu and Deng, Yangdong and Sun, Jian},
   journal={arXiv preprint arXiv:1711.07264},
-  year={2017}
-}
-@inproceedings{lin2017feature,
-  title={Feature pyramid networks for object detection},
-  author={Lin, Tsung-Yi and Doll{\'a}r, Piotr and Girshick, Ross and He, Kaiming and Hariharan, Bharath and Belongie, Serge},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-  pages={2117--2125},
   year={2017}
 }
 @inproceedings{he2017mask,
@@ -121,13 +59,6 @@
   booktitle={Proceedings of the IEEE international conference on computer vision},
   pages={2961--2969},
   year={2017}
-}
-@inproceedings{cai2018cascade,
-  title={Cascade r-cnn: Delving into high quality object detection},
-  author={Cai, Zhaowei and Vasconcelos, Nuno},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-  pages={6154--6162},
-  year={2018}
 }
 @inproceedings{liu2018path,
   title={Path aggregation network for instance segmentation},
@@ -141,45 +72,6 @@
   author={Sermanet, Pierre and Eigen, David and Zhang, Xiang and Mathieu, Micha{\"e}l and Fergus, Rob and LeCun, Yann},
   journal={arXiv preprint arXiv:1312.6229},
   year={2013}
-}
-@inproceedings{redmon2016you,
-  title={You only look once: Unified, real-time object detection},
-  author={Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-  pages={779--788},
-  year={2016}
-}
-@inproceedings{liu2016ssd,
-  title={Ssd: Single shot multibox detector},
-  author={Liu, Wei and Anguelov, Dragomir and Erhan, Dumitru and Szegedy, Christian and Reed, Scott and Fu, Cheng-Yang and Berg, Alexander C},
-  booktitle={European conference on computer vision},
-  pages={21--37},
-  year={2016},
-  organization={Springer}
-}
-@inproceedings{lin2017focal,
-  title={Focal loss for dense object detection},
-  author={Lin, Tsung-Yi and Goyal, Priya and Girshick, Ross and He, Kaiming and Doll{\'a}r, Piotr},
-  booktitle={Proceedings of the IEEE international conference on computer vision},
-  pages={2980--2988},
-  year={2017}
-}
-@inproceedings{law2018cornernet,
-  title={Cornernet: Detecting objects as paired keypoints},
-  author={Law, Hei and Deng, Jia},
-  booktitle={Proceedings of the European conference on computer vision (ECCV)},
-  pages={734--750},
-  year={2018}
-}
-@article{cheng2016learning,
-  title={Learning rotation-invariant convolutional neural networks for object detection in VHR optical remote sensing images},
-  author={Cheng, Gong and Zhou, Peicheng and Han, Junwei},
-  journal={IEEE Transactions on Geoscience and Remote Sensing},
-  volume={54},
-  number={12},
-  pages={7405--7415},
-  year={2016},
-  publisher={IEEE}
 }
 @article{cheng2018learning,
   title={Learning rotation-invariant and fisher discriminative convolutional neural networks for object detection},
@@ -210,16 +102,6 @@
   year={2018},
   publisher={Elsevier}
 }
-@article{yang2018automatic,
-  title={Automatic ship detection in remote sensing images from google earth of complex scenes based on multiscale rotation dense feature pyramid networks},
-  author={Yang, Xue and Sun, Hao and Fu, Kun and Yang, Jirui and Sun, Xian and Yan, Menglong and Guo, Zhi},
-  journal={Remote Sensing},
-  volume={10},
-  number={1},
-  pages={132},
-  year={2018},
-  publisher={Multidisciplinary Digital Publishing Institute}
-}
 @inproceedings{ding2019learning,
   title={Learning roi transformer for oriented object detection in aerial images},
   author={Ding, Jian and Xue, Nan and Long, Yang and Xia, Gui-Song and Lu, Qikai},
@@ -243,19 +125,7 @@
   year={2020},
   publisher={IEEE}
 }
-@article{yang2019r3det,
-  title={R3det: Refined single-stage detector with feature refinement for rotating object},
-  author={Yang, Xue and Liu, Qingqing and Yan, Junchi and Li, Ang and Zhang, Zhiqiang and Yu, Gang},
-  journal={arXiv preprint arXiv:1908.05612},
-  year={2019}
-}
-@article{han2021align,
-  title={Align deep features for oriented object detection},
-  author={Han, Jiaming and Ding, Jian and Li, Jie and Xia, Gui-Song},
-  journal={IEEE Transactions on Geoscience and Remote Sensing},
-  year={2021},
-  publisher={IEEE}
-}
+
 @article{rosenblatt1958perceptron,
   title={The perceptron: a probabilistic model for information storage and organization in the brain.},
   author={Rosenblatt, Frank},
@@ -285,14 +155,6 @@
   pages={1527--1554},
   year={2006},
   publisher={MIT Press}
-}
-@article{krizhevsky2012imagenet,
-  title={Imagenet classification with deep convolutional neural networks},
-  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-  journal={Advances in neural information processing systems},
-  volume={25},
-  pages={1097--1105},
-  year={2012}
 }
 @inproceedings{deng2009imagenet,
   title={Imagenet: A large-scale hierarchical image database},
@@ -380,36 +242,14 @@
   year={2016},
   publisher={IEEE}
 }
-@article{yang2018automatic,
-  title={Automatic ship detection in remote sensing images from google earth of complex scenes based on multiscale rotation dense feature pyramid networks},
-  author={Yang, Xue and Sun, Hao and Fu, Kun and Yang, Jirui and Sun, Xian and Yan, Menglong and Guo, Zhi},
-  journal={Remote Sensing},
-  volume={10},
-  number={1},
-  pages={132},
-  year={2018},
-  publisher={Multidisciplinary Digital Publishing Institute}
-}
-@inproceedings{yang2019scrdet,
-  title={Scrdet: Towards more robust detection for small, cluttered and rotated objects},
-  author={Yang, Xue and Yang, Jirui and Yan, Junchi and Zhang, Yue and Zhang, Tengfei and Guo, Zhi and Sun, Xian and Fu, Kun},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
-  pages={8232--8241},
-  year={2019}
-}
+
 @article{yu2015multi,
   title={Multi-scale context aggregation by dilated convolutions},
   author={Yu, Fisher and Koltun, Vladlen},
   journal={arXiv preprint arXiv:1511.07122},
   year={2015}
 }
-@inproceedings{dai2017deformable,
-  title={Deformable convolutional networks},
-  author={Dai, Jifeng and Qi, Haozhi and Xiong, Yuwen and Li, Yi and Zhang, Guodong and Hu, Han and Wei, Yichen},
-  booktitle={Proceedings of the IEEE international conference on computer vision},
-  pages={764--773},
-  year={2017}
-}
+
 @article{qiqiu,
   title={小流域系留气球低空遥感初步试验研究},
   author={翁祖平 and 刘桂云 and 马岚华 },
@@ -520,7 +360,9 @@
   volume={24},
   number={7},
   pages={971-987},
-  doi={10.1109/TPAMI.2002.1017623}}
+  doi={10.1109/TPAMI.2002.1017623}
+}
+
 @article{2森林火灾,
    title={基于遥感技术的“3·28”四川木里森林火灾应急灾情监测},
    author={唐尧;王立娟;赵娟;王安澜;},
@@ -796,7 +638,7 @@
   year={2017}
 }
 
-@article{16yang2018automatic,
+@article{yang2018automatic1,
   title={Automatic ship detection in remote sensing images from google earth of complex scenes based on multiscale rotation dense feature pyramid networks},
   author={Yang, Xue and Sun, Hao and Fu, Kun and Yang, Jirui and Sun, Xian and Yan, Menglong and Guo, Zhi},
   journal={Remote Sensing},
@@ -859,7 +701,7 @@
   publisher={IEEE}
 }
 
-@inproceedings{21dai2017deformable,
+@inproceedings{dai2017deformable1,
   title={Deformable convolutional networks},
   author={Dai, Jifeng and Qi, Haozhi and Xiong, Yuwen and Li, Yi and Zhang, Guodong and Hu, Han and Wei, Yichen},
   booktitle={Proceedings of the IEEE international conference on computer vision},
@@ -881,7 +723,7 @@
   organization={Springer}
 }
 
-@inproceedings{23xia2018dota,
+@inproceedings{xiadota,
   title={DOTA: A large-scale dataset for object detection in aerial images},
   author={Xia, Gui-Song and Bai, Xiang and Ding, Jian and Zhu, Zhen and Belongie, Serge and Luo, Jiebo and Datcu, Mihai and Pelillo, Marcello and Zhang, Liangpei},
   booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
@@ -889,7 +731,7 @@
   year={2018}
 }
 
-@inproceedings{26liu2017high,
+@inproceedings{liuhigh,
   title={A high resolution optical satellite image dataset for ship recognition and some new baselines},
   author={Liu, Zikun and Yuan, Liu and Weng, Lubin and Yang, Yiping},
   booktitle={International conference on pattern recognition applications and methods},
@@ -920,7 +762,7 @@
   year={2017},
   publisher={IEEE}
 }
-@article{29rabbi2020small,
+@article{rabbi,
   title={Small-object detection in remote sensing images with end-to-end edge-enhanced GAN and object detector network},
   author={Rabbi, Jakaria and Ray, Nilanjan and Schubert, Matthias and Chowdhury, Subir and Chao, Dennis},
   journal={Remote Sensing},
@@ -1029,7 +871,7 @@
   journal={arXiv preprint arXiv:1406.2661},
   year={2014}
 }
-@inproceedings{45ledig2017photo,
+@inproceedings{ 45ledig2017photo,
   title={Photo-realistic single image super-resolution using a generative adversarial network},
   author={Ledig, Christian and Theis, Lucas and Husz{\'a}r, Ferenc and Caballero, Jose and Cunningham, Andrew and Acosta, Alejandro and Aitken, Andrew and Tejani, Alykhan and Totz, Johannes and Wang, Zehan and others},
   booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
