修改文章页首字段，优化引用

--- a/scutthesis.bib
+++ b/scutthesis.bib
@@ -638,7 +638,7 @@
   year={2017}
 }
 
-@article{yang2018automatic1,
+@article{yang2018automatic,
   title={Automatic ship detection in remote sensing images from google earth of complex scenes based on multiscale rotation dense feature pyramid networks},
   author={Yang, Xue and Sun, Hao and Fu, Kun and Yang, Jirui and Sun, Xian and Yan, Menglong and Guo, Zhi},
   journal={Remote Sensing},
@@ -660,7 +660,7 @@
   publisher={IEEE}
 }
 
-@inproceedings{17yang2019scrdet,
+@inproceedings{yang2019scrdet,
   title={Scrdet: Towards more robust detection for small, cluttered and rotated objects},
   author={Yang, Xue and Yang, Jirui and Yan, Junchi and Zhang, Yue and Zhang, Tengfei and Guo, Zhi and Sun, Xian and Fu, Kun},
   booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
@@ -679,7 +679,7 @@
   publisher={IEEE}
 }
 
-@article{20yang2019r3det,
+@article{yang2019r3det,
   title={R3det: Refined single-stage detector with feature refinement for rotating object},
   author={Yang, Xue and Liu, Qingqing and Yan, Junchi and Li, Ang and Zhang, Zhiqiang and Yu, Gang},
   journal={arXiv preprint arXiv:1908.05612},
